# django_project_example

./: .bumpversion.cfg  .coverage  .env  .flake8  README.md  manage.py  pyproject.toml  pytest.ini
core/: api.py  decorators.py  filters.py  middleware.py  mixins.py  pagination.py  private_api.py  public_api.py
core/tests/: helpers.py
example_app/: __init__.py  admin.py  apps.py  constants.py  filters.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
example_app/api/public/: examples.py  urls.py
example_app/migrations/: 0001_initial.py  0002_alter_example_creator_alter_example_removed_by_and_more.py  0002_initial.py
example_app/serializers/: __init__.py  examples.py
example_app/tests/: test_apis.py  test_serializers.py  test_utils.py
example_app/tests/inp/: test_api_create_example.yml
example_app/views/: examples.py
settings/: __init__.py  pytest.py  test.py  urls.py
templates/examples/: excel_formula.html
users/: admin.py  apps.py  manager.py  models.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
